--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
+<html>
 <head>
 	<script type="text/javascript" src="d3.v3.min.js"></script>
 	<script type="text/javascript" src="interpreter.js"></script>
+	<link rel="stylesheet" type="text/css" href="interpreter.css"></link>
 </head>
 <body>
-	<div id="cartesian_plane">
+	<div id="container">
+		<div id="cartesian_plane">
+		</div>
 	</div>
 </body>
+</html>
