--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 	<script type="text/javascript" src="d3.v3.min.js"></script>
+	<script type="text/javascript" src="jquery-1.10.2.min.js"></script>
 	<script type="text/javascript" src="interpreter.js"></script>
 	<link rel="stylesheet" type="text/css" href="interpreter.css"></link>
 </head>
