Changed fill to semi-trans. Modified parser such that it reads from raw data and calculate fixations in real-time

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<script type="text/javascript" src="d3.v3.min.js"></script>
 	<script type="text/javascript" src="jquery-1.10.2.min.js"></script>
 	<script type="text/javascript" src="interpreter.js"></script>
+	<script type="text/javascript" src="entry.js"></script>
 	<link rel="stylesheet" type="text/css" href="interpreter.css"></link>
 </head>
 <body>
