--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <html>
 <head>
+	<!-- DOM manipulation libraries -->
 	<script type="text/javascript" src="d3.v3.min.js"></script>
 	<script type="text/javascript" src="jquery-1.10.2.min.js"></script>
+	<!-- SVG conversion libraries -->
+	<script type="text/javascript" src="rgbcolor.js"></script>
+	<script type="text/javascript" src="StackBlur.js"></script>
+	<script type="text/javascript" src="canvg.js"></script>
+	<!-- Application main file -->
 	<script type="text/javascript" src="interpreter.js"></script>
 	<script type="text/javascript" src="entry.js"></script>
 	<link rel="stylesheet" type="text/css" href="interpreter.css"></link>
