Scan path plotting
Add:
	File uploading and retrieve with user accounts based on fake
	database. Users are created based on MD5 hash of "Username" and
	"Password" combinations. All related files are stored in folders
	under these hashed values. File hierarchies are stored in text
	files under these hashed values in JSON format.

--- a/index.html
+++ b/index.html
@@ -1,18 +1,25 @@
 <html>
 <head>
 	<!-- DOM manipulation libraries -->
-	<script type="text/javascript" src="d3.v3.min.js"></script>
-	<script type="text/javascript" src="jquery-1.10.2.min.js"></script>
+	<script type="text/javascript" src="js/d3.v3.min.js"></script>
+	<script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
 	<!-- SVG conversion libraries -->
-	<script type="text/javascript" src="rgbcolor.js"></script>
-	<script type="text/javascript" src="StackBlur.js"></script>
-	<script type="text/javascript" src="canvg.js"></script>
+	<script type="text/javascript" src="js/rgbcolor.js"></script>
+	<script type="text/javascript" src="js/StackBlur.js"></script>
+	<script type="text/javascript" src="js/canvg.js"></script>
+	<!-- Other external libraries -->
+	<script type="text/javascript" src="js/md5.js"></script>
 	<!-- Application main file -->
-	<script type="text/javascript" src="interpreter.js"></script>
-	<script type="text/javascript" src="entry.js"></script>
-	<link rel="stylesheet" type="text/css" href="interpreter.css"></link>
+	<script type="text/javascript" src="js/UI.js"></script>
+	<script type="text/javascript" src="js/hasher.js"></script>
+	<script type="text/javascript" src="js/user.js"></script>
+	<script type="text/javascript" src="js/interpreter.js"></script>
+	<script type="text/javascript" src="js/entry.js"></script>
+	<link rel="stylesheet" type="text/css" href="styles/interpreter.css"></link>
 </head>
 <body>
+	<div id="user">
+	</div>
 	<div id="container">
 		<div id="cartesian_plane">
 		</div>
