--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html>
+<meta charset="utf-8">
 <head>
 	<!-- DOM manipulation libraries -->
 	<script type="text/javascript" src="js/d3.v3.min.js"></script>
