--- a/index.html
+++ b/index.html
@@ -19,8 +19,6 @@
           <a id="forkme_banner" href="https://github.com/StoneBird/scan-path-graph">View on GitHub</a>
 
           <h1 id="project_title">Scan-path-graph</h1>
-          <h2 id="project_tagline">Web application that imports and displays scan path and fixation data from commercial eye tracker systems. Features include: plot playback; user-defined raw data conversion;  data filter on time range, data order, and data duration; export graph to image file. Please read README before trying out demo. Demo:</h2>
-
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/StoneBird/scan-path-graph/zipball/master">Download this project as a .zip file</a>
               <a class="tar_download_link" href="https://github.com/StoneBird/scan-path-graph/tarball/master">Download this project as a tar.gz file</a>
@@ -34,7 +32,16 @@
         <h1>
 <a id="scan-path-plotter" class="anchor" href="#scan-path-plotter" aria-hidden="true"><span class="octicon octicon-link"></span></a>Scan path plotter</h1>
 
+<p><img src="images/splash.png" alt=""></p>
+
+<p>Web application that imports and displays scan path and fixation data from commercial eye tracker systems. Features include: plot playback; user-defined raw data conversion;  data filter on time range, data order, and data duration; export graph to image file.</p>
+
 <p>This is a web application to plot scan path based on eye tracking data of images. It can read a (image, data) file pair and draw scan path as output. All graphs are drawn in <code>svg</code> format and can be exported into <code>png</code> image for download.</p>
+
+<h2>Demo</h2>
+<p>Please read README before trying out demo.</p>
+
+<p><a href="https://demo-stonebird.rhcloud.com/sp/">Click to open demo</a></p>
 
 <h5>
 <a id="table-of-contents" class="anchor" href="#table-of-contents" aria-hidden="true"><span class="octicon octicon-link"></span></a>Table of Contents</h5>
